--- a/src/html/events.html
+++ b/src/html/events.html
@@ -1,4 +1,4 @@
-<section class="events">
+<section class="events" id="events">
   <div class="container events__container">
     <h2 class="events__title title">События</h2>
     <div class="swiper-container events-slider">
@@ -68,7 +68,7 @@
             </div>
           </div>
         </li>
-        <li class="events__item event  swiper-slide">
+        <li class="events__item event  swiper-slide event--hidden">
           <img src="img/events/events-3.jpg" alt="Еврейский музей" class="event__img">
           <div class="event__about">
             <div class="event__spans">
@@ -90,7 +90,7 @@
             </div>
           </div>
         </li>
-        <li class="events__item event  swiper-slide">
+        <li class="events__item event  swiper-slide event--hidden">
           <img src="img/events/events-4.jpg" alt="Третьяковка на Крымском валу" class="event__img">
           <div class="event__about">
             <div class="event__spans">
@@ -110,7 +110,7 @@
             </div>
           </div>
         </li>
-        <li class="events__item event swiper-slide">
+        <li class="events__item event swiper-slide event--hidden">
           <img src="img/events/events-5.jpg" alt="ММАМ" class="event__img">
           <div class="event__about">
             <div class="event__spans">
@@ -133,6 +133,6 @@
       </ul>
       <div class="events-slider__pagination"></div>
     </div>
-    <button class="btn-reset btn events__btn">Все события</button>
+    <button class="btn-reset btn events__btn"><span>Все события</span></button>
   </div>
 </section>
