--- a/src/html/gallery.html
+++ b/src/html/gallery.html
@@ -1,11 +1,11 @@
-<section class="gallery">
+<section class="gallery" id="gallery">
   <div class="container gallery__container">
     <div class="gallery__left gallery-left">
       <div class="gallery-left__top">
         <h2 class="title gallery__title">Галерея</h2>
         <p class="gallery__descr">Фильтровать по:</p>
         <div class="gallery-select">
-          <div class="gallery-select__top">Автор
+          <div class="gallery-select__top" tabindex="0" role="combobox" aria-label="автор" aria-expanded="false">Автор
             <svg>
               <use xlink:href="img/sprite.svg#arrow"></use>
             </svg>
@@ -34,130 +34,94 @@
         </div>
         <div class="swiper-wrapper gallery-slider__wrapper">
           <div class="gallery-slider__slide swiper-slide">
-            <picture>
-              <source media="(min-width: 601px)" srcset="img/gallery/gallery-1.jpg">
-              <source media="(max-width: 600px)" srcset="img/gallery/gallery-1-320.jpg">
-              <img src="img/gallery/gallery-1.jpg" alt="Картина 1">
-            </picture>
+            <div tabindex="0">
+              <img src="img/gallery/gallery-1.jpeg" alt="Картина 1">
+            </div>
           </div>
           <div class="gallery-slider__slide swiper-slide">
-            <picture>
-              <source media="(min-width: 601px)" srcset="img/gallery/gallery-2.jpg">
-              <source media="(max-width: 600px)" srcset="img/gallery/gallery-2-320.jpg">
-              <img src="img/gallery/gallery-2.jpg" alt="Картина 2">
-            </picture>
+            <div tabindex="0">
+              <img src="img/gallery/gallery-2.jpeg" alt="Картина 2">
+            </div>
           </div>
           <div class="gallery-slider__slide swiper-slide">
-            <picture>
-              <source media="(min-width: 601px)" srcset="img/gallery/gallery-3.jpg">
-              <source media="(max-width: 600px)" srcset="img/gallery/gallery-3-320.jpg">
-              <img src="img/gallery/gallery-3.jpg" alt="Картина 3">
-            </picture>
+            <div tabindex="0">
+              <img src="img/gallery/gallery-3.jpeg" alt="Картина 3">
+            </div>
           </div>
           <div class="gallery-slider__slide swiper-slide">
-            <picture>
-              <source media="(min-width: 601px)" srcset="img/gallery/gallery-4.jpg">
-              <source media="(max-width: 600px)" srcset="img/gallery/gallery-4-320.jpg">
-              <img src="img/gallery/gallery-4.jpg" alt="Картина 4">
-            </picture>
+            <div tabindex="0">
+              <img src="img/gallery/gallery-4.jpeg" alt="Картина 4">
+            </div>
           </div>
           <div class="gallery-slider__slide swiper-slide">
-            <picture>
-              <source media="(min-width: 601px)" srcset="img/gallery/gallery-5.jpg">
-              <source media="(max-width: 600px)" srcset="img/gallery/gallery-5-320.jpg">
-              <img src="img/gallery/gallery-5.jpg" alt="Картина 5">
-            </picture>
+            <div tabindex="0">
+              <img src="img/gallery/gallery-5.jpeg" alt="Картина 5">
+            </div>
           </div>
           <div class="gallery-slider__slide swiper-slide">
-            <picture>
-              <source media="(min-width: 601px)" srcset="img/gallery/gallery-6.jpg">
-              <source media="(max-width: 600px)" srcset="img/gallery/gallery-6-320.jpg">
-              <img src="img/gallery/gallery-6.jpg" alt="Картина 6">
-            </picture>
+            <div tabindex="0">
+              <img src="img/gallery/gallery-6.jpeg" alt="Картина 6">
+            </div>
           </div>
           <div class="gallery-slider__slide swiper-slide">
-            <picture>
-              <source media="(min-width: 601px)" srcset="img/gallery/gallery-7.jpg">
-              <source media="(max-width: 600px)" srcset="img/gallery/gallery-7-320.jpg">
-              <img src="img/gallery/gallery-7.jpg" alt="Картина 7">
-            </picture>
+            <div tabindex="0">
+              <img src="img/gallery/gallery-7.jpeg" alt="Картина 7">
+            </div>
           </div>
           <div class="gallery-slider__slide swiper-slide">
-            <picture>
-              <source media="(min-width: 601px)" srcset="img/gallery/gallery-8.jpg">
-              <source media="(max-width: 600px)" srcset="img/gallery/gallery-8-320.jpg">
-              <img src="img/gallery/gallery-8.jpg" alt="Картина 8">
-            </picture>
+            <div tabindex="0">
+              <img src="img/gallery/gallery-8.jpeg" alt="Картина 8">
+            </div>
           </div>
           <div class="gallery-slider__slide swiper-slide">
-            <picture>
-              <source media="(min-width: 601px)" srcset="img/gallery/gallery-9.jpg">
-              <source media="(max-width: 600px)" srcset="img/gallery/gallery-9-320.jpg">
-              <img src="img/gallery/gallery-9.jpg" alt="Картина 9">
-            </picture>
+            <div tabindex="0">
+              <img src="img/gallery/gallery-9.jpeg" alt="Картина 9">
+            </div>
           </div>
           <div class="gallery-slider__slide swiper-slide">
-            <picture>
-              <source media="(min-width: 601px)" srcset="img/gallery/gallery-10.jpg">
-              <source media="(max-width: 600px)" srcset="img/gallery/gallery-10-320.jpg">
-              <img src="img/gallery/gallery-10.jpg" alt="Картина 10">
-            </picture>
+            <div tabindex="0">
+              <img src="img/gallery/gallery-10.jpeg" alt="Картина 10">
+            </div>
           </div>
           <div class="gallery-slider__slide swiper-slide">
-            <picture>
-              <source media="(min-width: 601px)" srcset="img/gallery/gallery-11.jpg">
-              <source media="(max-width: 600px)" srcset="img/gallery/gallery-11-320.jpg">
-              <img src="img/gallery/gallery-11.jpg" alt="Картина 11">
-            </picture>
+            <div tabindex="0">
+              <img src="img/gallery/gallery-11.jpeg" alt="Картина 11">
+            </div>
           </div>
           <div class="gallery-slider__slide swiper-slide">
-            <picture>
-              <source media="(min-width: 601px)" srcset="img/gallery/gallery-12.jpg">
-              <source media="(max-width: 600px)" srcset="img/gallery/gallery-12-320.jpg">
-              <img src="img/gallery/gallery-12.jpg" alt="Картина 12">
-            </picture>
+            <div tabindex="0">
+              <img src="img/gallery/gallery-12.jpeg" alt="Картина 12">
+            </div>
           </div>
           <div class="gallery-slider__slide swiper-slide">
-            <picture>
-              <source media="(min-width: 601px)" srcset="img/gallery/gallery-13.jpg">
-              <source media="(max-width: 600px)" srcset="img/gallery/gallery-13-320.jpg">
-              <img src="img/gallery/gallery-13.jpg" alt="Картина 13">
-            </picture>
+            <div tabindex="0">
+              <img src="img/gallery/gallery-13.jpeg" alt="Картина 13">
+            </div>
           </div>
           <div class="gallery-slider__slide swiper-slide">
-            <picture>
-              <source media="(min-width: 601px)" srcset="img/gallery/gallery-14.jpg">
-              <source media="(max-width: 600px)" srcset="img/gallery/gallery-14-320.jpg">
-              <img src="img/gallery/gallery-14.jpg" alt="Картина 14">
-            </picture>
+            <div tabindex="0">
+              <img src="img/gallery/gallery-14.jpeg" alt="Картина 14">
+            </div>
           </div>
           <div class="gallery-slider__slide swiper-slide">
-            <picture>
-              <source media="(min-width: 601px)" srcset="img/gallery/gallery-15.jpg">
-              <source media="(max-width: 600px)" srcset="img/gallery/gallery-15-320.jpg">
-              <img src="img/gallery/gallery-15.jpg" alt="Картина 15">
-            </picture>
+            <div tabindex="0">
+              <img src="img/gallery/gallery-15.jpeg" alt="Картина 15">
+            </div>
           </div>
           <div class="gallery-slider__slide swiper-slide">
-            <picture>
-              <source media="(min-width: 601px)" srcset="img/gallery/gallery-16.jpg">
-              <source media="(max-width: 600px)" srcset="img/gallery/gallery-16-320.jpg">
-              <img src="img/gallery/gallery-16.jpg" alt="Картина 16">
-            </picture>
+            <div tabindex="0">
+              <img src="img/gallery/gallery-16.jpeg" alt="Картина 16">
+            </div>
           </div>
           <div class="gallery-slider__slide swiper-slide">
-            <picture>
-              <source media="(min-width: 601px)" srcset="img/gallery/gallery-17.jpg">
-              <source media="(max-width: 600px)" srcset="img/gallery/gallery-17-320.jpg">
-              <img src="img/gallery/gallery-17.jpg" alt="Картина 17">
-            </picture>
+            <div tabindex="0">
+              <img src="img/gallery/gallery-17.jpeg" alt="Картина 17">
+            </div>
           </div>
           <div class="gallery-slider__slide swiper-slide">
-            <picture>
-              <source media="(min-width: 601px)" srcset="img/gallery/gallery-18.jpg">
-              <source media="(max-width: 600px)" srcset="img/gallery/gallery-18-320.jpg">
-              <img src="img/gallery/gallery-18.jpg" alt="Картина 18">
-            </picture>
+            <div tabindex="0">
+              <img src="img/gallery/gallery-18.jpeg" alt="Картина 18">
+            </div>
           </div>
         </div>
       </div>
