--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -1,4 +1,4 @@
-<section class="projects">
+<section class="projects" id="projects">
   <div class="container projects__container">
     <h2 class="projects__title title">Проекты</h2>
     <p class="projects__text text">
@@ -25,7 +25,6 @@
     </p>
     <h3 class="projects__subtitle subtitle">Партнёры проектов:</h3>
     <div class="projects__bottom">
-
 
       <div class="projects__slider projects-slider">
         <div class="pagination-block__button-prev swiper-button-prev projects-slider__prev-btn"></div>
