--- a/src/html/about.html
+++ b/src/html/about.html
@@ -1,4 +1,4 @@
-<section class="about">
+<section class="about" id="about">
   <div class="container about__container">
     <h2 class="title about__title">О нас</h2>
     <p class="text about__text">Ясность нашей позиции очевидна: семантический разбор внешних противодействий однозначно
