--- a/src/html/contacts.html
+++ b/src/html/contacts.html
@@ -1,4 +1,4 @@
-<section class="contacts">
+<section class="contacts" id="contacts">
   <div class="container">
     <h2 class="contacts__title title">Контакты</h2>
   </div>
@@ -7,17 +7,29 @@
       <div class="contacts__wrapper">
         <div class="contacts__left contacts-left">
           <p class="contacts-left__address-title subtitle">Шоурум №4</p>
-          <p class="contacts-left__address text">Леонтьевский переулок, дом 5, строение 1</p>
+          <address class="contacts-left__address text">Леонтьевский переулок, дом 5, строение 1</address>
           <p class="contacts-left__back-call subtitle">Заказать обратный звонок</p>
-          <form action="#" class="contacts-left__form">
-            <input type="text" name="name" placeholder="Имя*">
-            <input type="tel" name="tel" placeholder="Телефон*">
-            <button type="submit" class="btn-reset contacts-left__btn btn">Заказать</button>
+          <form action="#" class="js-form contacts-left__form">
+            <div class="just-validate-tooltip-container">
+              <label for="name">
+                <input type="text" id="name" name="name" placeholder="Имя*" required data-validate-field="name"
+                       class="form__input form-control">
+              </label>
+            </div>
+            <div class="just-validate-tooltip-container">
+              <label for="phone">
+                <input type="tel" data-validate-field="phone" data-validate-rules="phone" name="phone" id="phone"
+                       placeholder="Телефон*" required class="form__input form-control">
+              </label>
+            </div>
+            <button type="submit" class="btn-reset contacts-left__btn btn"><span>Заказать</span></button>
           </form>
-          <p class="subtitle contacts-left__social-title">Связаться в одик клик</p>
+          <p class="subtitle contacts-left__social-title">Связаться в один клик</p>
           <div class="contacts-left__social">
-            <a href="https://whatsapp.com" class="contacts-left__social-btn contacts-left__social-btn--whatsapp"></a>
-            <a href="https://telegram.com" class="contacts-left__social-btn contacts-left__social-btn--telegram"></a>
+            <a href="https://wa.me/79187460255" target="_blank"
+               class="contacts-left__social-btn contacts-left__social-btn--whatsapp" aria-label="whatsapp"></a>
+            <a href="https://t.me/andreitru" target="_blank"
+               class="contacts-left__social-btn contacts-left__social-btn--telegram" aria-label="telegram"></a>
           </div>
         </div>
 
