--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,12 +1,15 @@
-<footer class="footer">
+<footer class="footer" id="footer">
   <div class="container footer__container">
     <a href="#" class="footer__logo logo">
       <img src="img/logo.png" alt="Логотип Blanchard">
     </a>
     <div class="footer__social footer-social">
-      <a href="https://vk.com" class="footer-social__link footer-social__link--vk" target="_blank"></a>
-      <a href="https://instagram.com" class="footer-social__link footer-social__link--instagram" target="_blank"></a>
-      <a href="https://fb.com" class="footer-social__link footer-social__link--fb" target="_blank"></a>
+      <a href="https://vk.com" class="footer-social__link footer-social__link--vk" target="_blank"
+         aria-label="вконтакте"></a>
+      <a href="https://instagram.com" class="footer-social__link footer-social__link--instagram" target="_blank"
+         aria-label="instagram"></a>
+      <a href="https://fb.com" class="footer-social__link footer-social__link--fb" target="_blank"
+         aria-label="facebook"></a>
     </div>
   </div>
 </footer>
