--- a/src/html/hero.html
+++ b/src/html/hero.html
@@ -10,6 +10,6 @@
     <h1 class="hero__title">Прикоснитесь к прекрасному</h1>
     <p class="hero__text">Мы вынуждены отталкиваться от того, что реализация намеченных плановых заданий создаёт
       предпосылки для новых предложений.</p>
-    <button class="btn-reset btn hero__btn">Подписаться на рассылку</button>
+    <a href="#contacts" class=" btn hero__btn" role="button">Подписаться на рассылку</a>
   </div>
 </section>
