--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
   <meta name="theme-color" content="#111111">
   <title>Blanchard: художественная галерея</title>
   <link rel="stylesheet" href="css/main.min.css">
+  <link rel="preload" href="/fonts/OpenSans-Regular.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/fonts/OpenSans-SemiBold.woff2" as="font" type="font/woff2" crossorigin>
 </head>
 <body>
 <div class="site-container">
