correction of defects

--- a/src/html/gallery.html
+++ b/src/html/gallery.html
@@ -20,7 +20,7 @@
       </div>
       <div class="gallery-left__bottom">
         <p class="gallery__text">Вам предоставляется 10 бесплатных скачиваний. Для увеличения количества скачиваний <a
-          class="link gallery__link" href="#">авторизуйтесь</a>, либо воспользуйтесь лицензией. </p>
+          class="link gallery__link" href="#">авторизуйтесь,</a> либо воспользуйтесь лицензией. </p>
       </div>
     </div>
 
